# list_inc

./: Cargo.toml  data.txt
src/: main.rs
