[package]
name = "list_inc"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
openapi = { path = "../twilio-rust" }
tokio = { version = "1.15.0", features = ["full"] }
sendgrid = { version = "0.17.4", features = ["async"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
